use global exception from shared library